--- a/examples/webtransport-wasm/index.html
+++ b/examples/webtransport-wasm/index.html
@@ -6,7 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./wasm_exec.js"></script>
-  <script src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
